Fix logic code